# password-manager

./: CHANGELOG.md  GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_mobile.py  test_tui.py  test_vault.py
.github/workflows/: publish.yml
assets/tapes/: palette.tape  search.tape  themes.tape  unlock.tape
pw_manager/: cli.py  crypto.py  logo.py  mobile.py  tui.py  vault.py
pw_manager/web/: page.html
