[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-password-manager"
version = "0.2.4"
description = "The Paladin — a local encrypted password manager that lives in your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi",
    "cryptography",
    "textual",
]

[tool.setuptools]
packages = ["pw_manager"]

[project.scripts]
pw = "pw_manager.cli:main"

[project.urls]
Repository = "https://github.com/Daisentaur/password-manager"
Changelog = "https://github.com/Daisentaur/password-manager/blob/main/CHANGELOG.md"
